# include_linkml

./: Makefile  README.md  mkdocs.yml  setup.cfg  setup.py
docs/: 404.html  index.html  search.html
docs/Boolean/: index.html
docs/Date/: index.html
docs/Datetime/: index.html
docs/Decimal/: index.html
docs/Double/: index.html
docs/EthnicityEnum/: index.html
docs/Float/: index.html
docs/GenderEnum/: index.html
docs/HandednessEnum/: index.html
docs/Integer/: index.html
docs/LanguageEnum/: index.html
docs/NamedThing/: index.html
docs/Ncname/: index.html
docs/Nodeidentifier/: index.html
docs/Objectidentifier/: index.html
docs/Person/: index.html
docs/RaceEnum/: index.html
docs/ResidenceEnum/: index.html
docs/SampleEnum/: index.html
docs/String/: index.html
docs/Time/: index.html
docs/Uri/: index.html
docs/Uriorcurie/: index.html
docs/Visit/: index.html
docs/age_of_father_at_birth/: index.html
docs/age_of_mother_at_birth/: index.html
docs/birth_city/: index.html
docs/birth_country/: index.html
docs/birth_month/: index.html
docs/birth_year/: index.html
docs/credits/: index.html
docs/dob/: index.html
docs/ethnicity/: index.html
docs/first_name/: index.html
docs/handedness/: index.html
docs/home/: index.html
docs/id/: index.html
docs/last_name/: index.html
docs/middle_name/: index.html
docs/name/: index.html
docs/other_language/: index.html
docs/parent_sample/: index.html
docs/primary_language/: index.html
include_test/: include_core.py  include_schema.py
tests/: test_input_against_model.py
(+16 files in other folders)
