[metadata]
name = include_test
url = https://github.com/diatomsRcool/include_test
author = Anne Thessen
author_email = annethessen@gmail.com
summary = Data model for INLCUDE project
description = Data model for INLCUDE project
long_description = Data model for INLCUDE project
home_page = https://diatomsRcool.github.io/include_test
license = CC0 1.0 Universal
python_requires = >=3.7
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = 
    linkml
    LOD
    Modeling
    Linked open data
    model

[options]
include_package_data = True

[files]
packages =
    include_test

data-files = include_test/model = include_test/model/*
    include_test/jsonld_context = include_test/jsonld_context/*
    include_test/json_schema = include_test/json_schema/*
    include_test/model = include_test/model/*


